fix: change sidebar height to fit on mobile

--- a/styles/header.scss
+++ b/styles/header.scss
@@ -1148,7 +1148,7 @@ $close-button-width: 48px;
     right: -100vw;
     background-color: #fff;
     transition: all 0.5s;
-    height: 100vh;
+    height: 100%;
     width: calc(100vw - 48px);
     max-width: 400px;
     min-width: unset;
